--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,100 +1,80 @@
-/* CSS Reset & Global Styles */
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans';
-  -webkit-appearance: none;
+body {
+    margin: 0px;
+    background-color: darkslategray;
 }
 
-::placeholder {
-  color: rgb(221, 221, 221);
+
+
+.heading {
+    display: flex;
+    background-color:rgb(43, 56, 59);
+    height: 60px;
+    align-items: center;
 }
-
-.wrapper {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(20, 19, 19);
-  transition: 0.8s all;
+.heading h1 {
+    color:darkcyan;
+    margin-left: 40%;
+    font-size: 50px;
 }
-
-h1 {
-  margin-bottom: 1.5%;
-  color: #fff;
-  font-weight: normal;
+.options {
+    margin-left: 35%;
+    display: flex;
+    font-size: 30px;
 }
-
-.container {
-  width: 350px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+.options i {
+    color: white;
+    padding-right: 10px;
 }
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80%;
+.box {
+    /* background-color: darkcyan; */
+    /* border-radius: 10px; */
+    margin-top: 5%;
+    margin-left: 35%;
+    width: 380px;
+    display: flex;
+    flex-direction: column;
 }
-
-.top-buttons {
-  display: flex;
-  align-items: center;
-
+.box div {
+    margin: 5px;
 }
-
-input {
-  padding: 25px;
-  color: rgb(255, 255, 255);
-  font-size: 1em;
-  cursor: pointer;
-  width: 70px;
-  background-color: rgb(47, 51, 50);
-  border: none;
-  outline: none;
-  border-radius: 100px;
-  margin: 0.2em;
+#result {
+    width: 197px;
+    height: 70px;
+    border-radius: 40px;
+    padding-left: 30px;
+    font-size: 16px;
+    color: white;
 }
-
-.first-row,
-.second-row,
-.third-row,
-.fourth-row,
-.fifth-row {
-  margin-bottom: 4px;
-}
-
-input[type="text"] {
-  background-color: rgb(47, 51, 50);
-  width: 222.5px;
-}
-
-input[type="button"]:hover {
-  background-color: rgb(101, 101, 101);
-  color: #fff;
-}
-
 #clear-button {
-  color: #fff;
-  background-color: rgb(255, 42, 42);
+    background-color:rgb(43, 56, 59);
+    color: white
+}
+.box div input {
+    margin-left: 5px;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    border: transparent;
+    font-size: 18px;
+    color: white;
+    background-color:steelblue;
+}
+.options i:hover {
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
-a {
-  text-decoration: none;
-  color: #fff;
-}
 
-#github-icon {
-  margin-right: 10px;
-}
 
-.theme-button {
-  all: unset;
-  cursor: pointer;
+
+
+
+
+/* hover */
+.box div input:hover {
+    cursor: pointer;
+}
+.buttons input:hover {
+    cursor: pointer;
+    background-color:rgb(133, 173, 187);
 }
